web-infras/parser/tests/fixtures/babel/core/uncategorised/493/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,42)
1|function hello() {'use strict'; ({ set s(eval) { } }); }
 |                                        ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,42)
1|function hello() {'use strict'; ({ set s(eval) { } }); }
 |                                        ^
